--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             <p>A simple and responsive task management app built with HTML, CSS, and JavaScript. Allows adding, deleting, and marking tasks as complete, with automatic saving in the browser.</p>
             <a href="https://github.com/zainah04/todo-list-app" target="_blank">View on GitHub</a>
         </div>
+        <div class="project-card">
+            <h3>portfolio webpage</h3>
+            <p>A responsive, clean portfolio website built with HTML, CSS, and JavaScript to showcase my skills, projects, and contact information.</p>
+            <a href="https://github.com/zainah04/portfolio-" target="_blank">View on GitHub</a>
+        </div>
     </section>
 
     <!-- Contact Section -->
